--- a/package.json
+++ b/package.json
@@ -16,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/viktordiag/frontend-project-44/issues"
   },
-  "homepage": "https://github.com/viktordiag/frontend-project-44#readme"
+  "homepage": "https://github.com/viktordiag/frontend-project-44#readme",
+  "bin": {
+    "brain-games": "bin/brain-games.js"
+  } 
+
+
+
 }
+
