--- a/package.json
+++ b/package.json
@@ -19,9 +19,8 @@
   "homepage": "https://github.com/viktordiag/frontend-project-44#readme",
   "bin": {
     "brain-games": "bin/brain-games.js"
-  } 
-
-
-
+  },
+  "dependencies": {
+    "readline-sync": "^1.4.10"
+  }
 }
-
