--- a/package.json
+++ b/package.json
@@ -18,9 +18,17 @@
   },
   "homepage": "https://github.com/viktordiag/frontend-project-44#readme",
   "bin": {
-    "brain-games": "bin/brain-games.js"
+    "brain-games": "bin/brain-games.js",
+    "brain-even": "bin/brain-even.js"
   },
   "dependencies": {
-    "readline-sync": "^1.4.10"
+    "lodash": "^4.17.21",
+    "readline-sync": "^1.4.10",
+    "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "eslint": "^8.29.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0"
   }
 }
