--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@hexlet/code",
+  "name": "c",
   "version": "1.0.0",
   "type": "module",
   "description": "[![Actions Status](https://github.com/viktordiag/frontend-project-44/workflows/hexlet-check/badge.svg)](https://github.com/viktordiag/frontend-project-44/actions)",
@@ -20,10 +20,12 @@
   "bin": {
     "brain-games": "bin/brain-games.js",
     "brain-even": "bin/brain-even.js",
-    "brain-calc": "bin/brain-calc.js"
+    "brain-calc": "bin/brain-calc.js",
+    "brain-gcd": "bin/brain-gcd.js"
   },
   "dependencies": {
     "lodash": "^4.17.21",
+    "mathjs": "^11.5.0",
     "readline-sync": "^1.4.10",
     "request": "^2.88.2"
   },
